<resources>
    <string name="app_name">VRM</string>
    <string name="app_name_complete">Victron Energy</string>
    <string name="loading">Loading…</string>
    <string name="actionbar_title_site_summary">Site summary</string>
    <string name="actionbar_title_site_detail">Site details</string>
    <string name="actionbar_title_io_settings">IO Settings</string>
    <string name="actionbar_title_historic_data">Historical data</string>
    <string name="actionbar_title_about">About</string>
    <plurals name="actionbar_title_site_summary_plural">
        <item quantity="one">Site summary</item>
        <item quantity="other">Site summaries</item>
    </plurals>
    <string name="menu_save">Save</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_web">WebApp</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_search">Search</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_website">Open VRM Portal</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_about">About</string>
    <string name="menu_logout_email">Logout - %1$s</string>
    <string name="menu_more">More</string>
    <string name="menu_open">Open site summary</string>
    <string name="menu_close">Close site summary</string>
    <string name="login">Login</string>
    <string name="sms_token">Enter SMS token</string>
    <string name="user">VRM Portal e-mail</string>
    <string name="password">VRM Portal password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="invalid_email_address">Please enter a valid email address.</string>
    <string name="invalid_password">Please enter a password.</string>
    <string name="logging_in">Logging in…</string>
    <string name="sign_in">Login</string>
    <string name="demo">Demo</string>
    <string name="look_inside">Take a look inside</string>
    <string name="site_status">Site status</string>
    <string name="login_loading">Login…</string>
    <string name="date_inaccurate">Error establishing a secure connection.\nCheck your date and time settings and try again.</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="about_version">Version %1$s</string>
    <string name="site_search_hint">Site name</string>
    <string name="sitesummary_section_alarm">Status alarm</string>
    <string name="sitesummary_section_ok">Status OK</string>
    <string name="sitesummary_section_old_data">Data older than two weeks</string>
    <string name="sitesummary_last_update_alarm">In alarm since %s</string>
    <string name="sitesummary_last_update_old">Not sending data since %s</string>
    <string name="sitesummary_filter_no_sites_found">No sites found</string>
    <string name="widget_title_ac_in_genset">GENSET</string>
    <string name="widget_title_ac_in_grid">GRID</string>
    <string name="widget_title_ac_out">AC LOAD</string>
    <string name="widget_title_battery_state">BATTERY STATE</string>
    <string name="widget_title_dc_power_system">DC POWER SYSTEM</string>
    <string name="widget_title_pv_power">PV POWER</string>
    <string name="widget_title_state_of_charge">BATTERY SOC</string>
    <string name="widget_value_battery_state_idle">Idle</string>
    <string name="widget_value_battery_state_charging">Charging</string>
    <string name="widget_value_battery_state_discharging">Discharging</string>
    <string name="site_detail_header_ac_in_grid">Grid</string>
    <string name="site_detail_header_ac_in_generator">Genset</string>
    <string name="site_detail_header_ac_load">AC Load</string>
    <string name="site_detail_header_dc_system">DC System</string>
    <string name="site_detail_header_site_io">IO Extender</string>
    <string name="site_detail_button_start_generator">Start Generator</string>
    <string name="site_detail_button_stop_generator">Stop Generator</string>
    <string name="site_detail_generator_settings_not_set">Start/Stop Generator</string>
    <string name="site_detail_info_generator_set_settings">Click on the settings icon to setup this feature</string>
    <string name="site_detail_button_historical_data">Historical data</string>
    <string name="formatted_value_v">%.2fV</string>
    <string name="formatted_value_a">%.1fA</string>
    <string name="formatted_value_w">%.0fW</string>
    <string name="formatted_value_kw">%.1fkW</string>
    <string name="formatted_value_percentage">%.1f%%</string>
    <string name="formatted_value_ah">%.2fAh</string>
    <string name="formatted_value_time">%1$sh %2$sm</string>
    <string name="not_available">---</string>
    <string name="not_available_v">---V</string>
    <string name="not_available_a">---A</string>
    <string name="not_available_ah">---Ah</string>
    <string name="not_available_w">---W</string>
    <string name="not_available_percentage">---%</string>
    <string name="not_available_time">--h --m</string>
    <string name="settings_header">Settings</string>
    <string name="settings_webapp_site">Open site in VRM Portal</string>
    <string name="settings_manage_alarms">Manage alarms</string>
    <string name="settings_webview_error">Unable to load VRM Portal please try again later</string>
    <string name="settings_io_extender">Personalize IO Extender</string>
    <string name="settings_has_generator">This system has a generator</string>
    <string name="settings_generator_output">Select the output on the IO Extender that controls the generator</string>
    <string name="settings_generator_state">When this output is closed, the generator is</string>
    <string name="settings_title">%1$s settings</string>
    <string name="settings_select_output">Select output</string>
    <string name="settings_generator_state_stopped">Stopped</string>
    <string name="settings_generator_state_running">Running</string>
    <string name="io_state_open">Open</string>
    <string name="io_state_closed">Closed</string>
    <string name="io_header_output">Output</string>
    <string name="io_header_input">Input</string>
    <string name="io_header_temperature">Temperature</string>
    <string name="io_hint_name">IO Name</string>
    <string name="io_button_update_image">Update image</string>
    <string name="io_sd_not_mounted">Not possible to pick a photo because external storage is not currently mounted.</string>
    <string name="io_error_name">Error updating the name! Try again later.</string>
    <string name="io_success_name">Name successfully updated!</string>
    <string name="io_temperature">%.2f °C</string>
    <string name="io_not_available">N/A</string>
    <string name="io_get_picture">Get picture from…</string>
    <string name="io_pick_picture_canceled">Picture selection canceled.</string>
    <string name="io_activity_not_found">No application available on your device to perform this action.</string>
    <string name="historic_deepest_discharge">Deepest discharge</string>
    <string name="historic_last_discharge">Last discharge</string>
    <string name="historic_average_discharge">Average discharge</string>
    <string name="historic_charge_cycles">Charge cycles</string>
    <string name="historic_full_discharge_cycles">Full discharge cycles</string>
    <string name="historic_total_ah_drawn">Total Ah drawn</string>
    <string name="historic_minimum_voltage">Minimum voltage</string>
    <string name="historic_maximum_voltage">Maximum voltage</string>
    <string name="historic_time_since_last_full_charge">Time since last full charge</string>
    <string name="historic_automatic_syncs">Automatic syncs</string>
    <string name="historic_low_voltage_alarms">Low voltage alarms</string>
    <string name="historic_high_voltage_alarms">High voltage alarms</string>
    <string name="historic_low_starter_voltage_alarms">Low starter voltage alarms</string>
    <string name="historic_high_starter_voltage_alarms">High starter voltage alarms</string>
    <string name="historic_minimum_starter_voltage">Minimum starter voltage</string>
    <string name="historic_maximum_starter_voltage">Maximum starter voltage</string>
    <string name="gallery_question_delete_image">Are you sure you want to delete this image?</string>
    <string name="gallery_title">%1$s of %2$s</string>
    <string name="gallery_emtpy">No photos yet for this site, to add photos you need to get admin rights to this installation</string>
    <string name="take_picture_uploading">Uploading picture</string>
    <string name="send">Send</string>
    <string name="sms_sent">SMS sent</string>
    <string name="sms_send_failed">Send SMS Failed</string>
    <string name="sms_generic_failure">Check the phone number</string>
    <string name="sms_no_service">No service</string>
    <string name="sms_null_pdu">Null PDU</string>
    <string name="sms_radio_off">Radio off</string>
    <string name="sms_delivered">SMS delivered</string>
    <string name="sms_not_delivered">SMS not delivered</string>
    <string name="sms_dialog_title">Send SMS Command</string>
    <string name="sms_dialog_message">Send the SMS command &lt;b>%1$s&lt;/b> to the number &lt;b>%2$s&lt;/b>?</string>
    <string name="ok_dialog">OK</string>
    <string name="cancel_dialog">Cancel</string>
    <string name="error_unable_to_connect">Can\'t make a connection, make sure you are connected to the internet</string>
    <string name="error_no_phonenumber">There is no phonenumber defined for this site</string>
    <string name="error_no_permission">You don\'t have permission for this action</string>
    <string name="error_demo_user_message">You can\'t use this feature as a Demo user</string>
    <string name="error_no_connection">Unable to connect, make sure you have a working internet connection and try again</string>
    <string name="error_unable_to_send_text">Unable to send text message with this device</string>
    <string name="error_take_picture">Not possible to get a picture from Gallery or Camera.</string>
    <string name="error_sms_invalid">The SMS code you entered was invalid</string>
    <string name="response_not_allowed">You don\'t have permission to perform this action</string>
    <string name="response_old_version">You are running an old version, please update the app in the Android Play Store</string>
    <string name="response_invalid_login">Wrong email or password</string>
    <string name="title_activity_activity_gallery">ActivityGallery</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_take_picture">TakePictureActivity</string>
    <string name="about_text">Monitor and manage your Victron Energy system. Login with your VRM account, and see all your sites in a list. Tap a site to see its system diagram, current system status and energy flow. Swipe left and right to go from site to site.\n\n<b>IO Extender</b>\nThe VRM app also allows you to monitor and control the inputs, temperature and outputs of the IO Extender. Use the app to open and close the IO Extender outputs.\n\n<b>Supported systems</b>\n- BMV \n- Multi or Quattro \n- BMV + Multi or Quattro \n- BMV + MPPT 150/70 + Multi or Quattro \n- BMV + Multi or Quattro + PV Inverter\n\n<b>Start and stop a genset</b>\nConfigure to which output your genset is connected, and let the app generate the sms code which will start and stop the genset.\n\nThis app requires your system to be connected to the internet through a Victron Global Remote, Victron Ethernet Remote or Color Control GX.</string>
</resources>