<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:compat="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/button_search"
        compat:actionLayout="@layout/search_layout"
        android:icon="@drawable/ic_menu_search"
        compat:showAsAction="always|collapseActionView"
        android:orderInCategory="1"
        android:title="@string/menu_search"/>

    <item
        android:orderInCategory="4"
        android:id="@+id/menu_item_site_list"
        android:icon="@drawable/ic_menu_overflow"
        android:title="@string/menu_more"
        compat:showAsAction="always">

        <menu>

            <item
                android:id="@+id/menu_button_website"
                compat:showAsAction="never"
                android:title="@string/menu_website"/>

            <item
                android:id="@+id/menu_button_about"
                compat:showAsAction="never"
                android:title="@string/menu_about"/>

            <item
                android:id="@+id/menu_button_logout"
                compat:showAsAction="never"
                android:title="@string/menu_logout"/>
        </menu>
    </item>

</menu>